--- a/style.css
+++ b/style.css
@@ -1,62 +1,69 @@
-*{
+* {
     margin: 0;
     padding: 0;
-}
-.main_div{
+}  
+.main_div {
     display: flex;
-    /* flex-wrap: wrap; */
     margin-left: 2rem;
     margin-top: 2rem;
-    height:500px;
+    height: 500px;
     width: 70%;
     overflow-y: scroll;
     box-shadow: 2px 1px 2px 2px;
 }
-.left_div{
+
+.left_div {
     position: sticky;
     top: 0;
-    height:500px;
+    height: 500px;
     width: 40%;
     overflow-y: scroll;
     overflow-x: hidden;
 }
-.box1{
+
+.box1 {
     position: sticky;
     top: 0;
-    background-color:white;
+    background-color: white;
     height: 50px;
     padding: 1rem;
 }
-p{
+
+p {
     margin-left: 1rem;
     font-size: 20px;
 }
-i{
+
+i {
     font-size: 1.5rem;
     padding: 1rem;
     color: grey;
 }
-span{
+
+span {
     font-size: 20px;
     font-weight: bold;
 
 }
-.right_div{
+
+.right_div {
     height: 500px;
     width: 100%;
 }
-.span1{
+
+.span1 {
     padding: 1rem;
-    margin-left:0.5rem;
+    margin-left: 0.5rem;
 }
 
-.item:hover{
-    background-color:lightgray;
+.item:hover {
+    background-color: lightgray;
     border-radius: 0.5rem;
-    margin-left:0.5rem;
-    margin-right:0.5rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
 }
-.header{
+
+.header {
     display: flex;
     flex-wrap: wrap;
     background-color: blue;
@@ -65,13 +72,28 @@ span{
     color: white;
     font-weight: bold;
 }
-.short_drawer{
+
+.short_drawer {
+    position: relative;
+    left: 50rem;
+    bottom: 20rem;
     margin-top: 1rem;
-    /* display: flex;
-    flex-direction: column; */
-    background-color: azure;
+    display: flex;
+    flex-direction: column;
+    background-color: whitesmoke;
     width: 20%;
     height: 10%;
-    border: 0.5px solid black;
     margin-left: 25rem;
+    box-shadow: 2px 1px 2px 2px;
+}
+.item1{
+    background-color:lightgray;
+    border-radius: 0.5rem;
+    margin-bottom: 0.5rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    color: blue;
+}
+.icon{
+    color: blue;
 }
