style:color changes

--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
 .left_div {
     position: sticky;
     top: 0;
-    height: 500px;
-    width: 40%;
+    height: 450px;
+    width: 35%;
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -33,20 +33,11 @@ p {
     margin-left: 1rem;
     font-size: 20px;
 }
-
-i {
-    font-size: 1.5rem;
-    padding: 1rem;
-    color: grey;
-}
-
 a{
     font-size: 20px;
     font-weight: bold;
     text-decoration: none;
-    color: black;
-
-
+    color:#737373;
 }
 
 .right_div {
@@ -59,12 +50,10 @@ a{
     margin-left: 0.5rem;
 }
 .item{
-    margin-left: 1rem;
-}
-a{
     padding: 1rem;
-    padding-left: 0rem;
-
+}
+.icon{
+    padding:1rem;
 }
 
 a:hover {
@@ -73,8 +62,6 @@ a:hover {
     box-sizing: border-box;
     padding: 1rem;   
     padding-left: 0rem;
-
-
 }
 a:focus{
     background-color:#d8b4fe;
@@ -82,10 +69,8 @@ a:focus{
     border-radius: 0.5rem;
     color: blue;
     padding-left: 0rem;
-
-
-    }
-a .icon:focus{
+}
+.i:focus{
     color: blue;
 }
 .header {
@@ -104,7 +89,6 @@ a .icon:focus{
     flex-direction: column;
     background-color: whitesmoke;
     width: 20%;
-    height: 10%;
     margin-left: 25rem;
     box-shadow: 2px 1px 2px 2px;
 }
